repair distcheck, distribute manual sources also for --disable-doc

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -8,19 +8,31 @@ manual_FILES = \
 	shortcuts.tex \
 	tutorial.tex \
 	features.tex \
-	bibliography.bib \
-	latex-manual.sh
-# 	code/manual_min_c2c.c
-
+	bibliography.bib
 
 EXTRA_DIST = $(manual_FILES)
 CLEANFILES =
 MOSTLYCLEANFILES =
-dist_doc_DATA =
+
+.PHONY: doc manual
 
 doc: manual
-manual: manual.pdf
 
+if ENABLE_DOC
+if HAVE_LATEX
+manual: manual.pdf
+else
+manual:
+	@echo "No complete LaTeX-installation was not found in your PATH."
+	@echo "Can't build the User's Guide without pdflatex, makeindex and bibtex."
+	@echo "Install these and rerun configure."
+endif
+else
+manual:
+	@echo "Skip build of documentation because of --disable-doc."
+endif
+
+if ENABLE_DOC
 if HAVE_LATEX
 %.tex: ../tests/%.ctex
 	cat $< \
@@ -30,27 +42,23 @@ if HAVE_LATEX
 	    | sed ':a s,\\red§\([^§]*[^\\]\)_\([^§]*\)§,\\red§\1\\_\2§,; ta # replace _ by \_ in single-line \red' \
 	    | sed '/^\\red§$$/,/^§$$/{s/_/\\_/g}			    # replace _ by \_ in multi-line \red' \
 	    | sed 's/\\red§/(\*@\\color{red}/g; s/§/@\*)/g		    # convert \red tags into LaTeX (single- and multi-line)' \
-	    > $(srcdir)/$@
+	    > $(builddir)/$@
 
 # Following files are not part of EXTRA_DIST, since they are built from .ctex files
-manual_FILES += \
+gentex_FILES = \
 	man_fftw_3don1d.tex
 
-manual.pdf: $(manual_FILES) latex-manual.sh latexinc.sh
+manual.pdf: $(manual_FILES) $(gentex_FILES) latex-manual.sh latexinc.sh
 	sh latex-manual.sh
 
-dist_doc_DATA += manual.pdf
-CLEANFILES    += manual.pdf
+EXTRA_DIST  += manual.pdf 
+CLEANFILES  += manual.pdf
 MOSTLYCLEANFILES += \
 	*.aux *.aux.bak\
 	manual.bbl manual.blg \
 	manual.idx manual.idx.bak manual.ilg manual.ind\
-	manual.log manual.out manual.toc manual.lof manual.lot manual.tdo
-else
-manual.pdf:
-	@echo "No complete LaTeX-installation was not found in your PATH."
-	@echo "Can't build the User's Guide without pdflatex, makeindex and bibtex."
-	@echo "Install these and rerun configure."
+	manual.log manual.out manual.toc manual.lof manual.lot manual.tdo \
+	$(gentex_FILES)
+endif
 endif
 
-.PHONY: doc manual
