start integration of OpenMP into build system

--- a/api/Makefile.am
+++ b/api/Makefile.am
@@ -12,8 +12,13 @@ nodist_include_HEADERS = pfft.f pfft.f03 pfftl.f03
 else
 noinst_HEADERS = pfft.h
 endif
-	
-noinst_LTLIBRARIES = libapi.la
+
+LIBAPI_OMP_LA =
+if ENABLE_OPENMP
+LIBAPI_OMP_LA += libapi_omp.la
+endif
+
+noinst_LTLIBRARIES = libapi.la $(LIBAPI_OMP_LA)
 
 EXTRA_DIST = f03-api.sh f03-wrap.sh genf03-api.pl genf03-wrap.pl build-f03-api.sh
 
@@ -30,3 +35,19 @@ libapi_la_SOURCES = \
 	pfftl.f03.in \
 	f03-wrap.c
 
+if ENABLE_OPENMP
+libapi_omp_la_CFLAGS = $(OPENMP_CFLAGS) 
+
+# Group local sources into convenience lib.
+libapi_omp_la_SOURCES = \
+        api-basic.c \
+        api-adv.c \
+	pfft.f.in \
+	fortran-api.c \
+	fortran-mangling.h \
+	fortran-prototypes.h \
+	fortran-wrappers.h \
+	pfft.f03.in \
+	pfftl.f03.in \
+	f03-wrap.c
+endif
