--- a/tests/openmp/Makefile.am
+++ b/tests/openmp/Makefile.am
@@ -7,9 +7,9 @@ AM_CPPFLAGS += -I$(top_srcdir)/api
 # Libraries to add to all programs that are built.
 LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@_omp.la $(fftw3_openmp_LIBS) $(fftw3_mpi_LIBS) $(fftw3_LIBS)
 
-check_CFLAGS = $(OPENMP_CFLAGS)
+AM_CFLAGS = $(OPENMP_CFLAGS)
 
 # These programs are built by 'make check' and may be tested afterwards.
 check_PROGRAMS = \
-	omp_simple_check_c2c omp_simple_check_c2c_transposed
+	simple_check_c2c simple_check_c2c_transposed
 
