--- a/configure.ac
+++ b/configure.ac
@@ -68,8 +68,8 @@ AM_CONDITIONAL([HAVE_THREADS], [test "x$enable_threads" = "xyes"])
 AC_ARG_ENABLE(debug, 
   [AS_HELP_STRING([--enable-debug], [compile with extra runtime checks for debugging])],
   enable_debug=$enableval, enable_debug=no)
-if test "x$enable_debug" = "xyes"; then
-  AC_DEFINE(PFFT_DEBUG,1,[Define to enable extra debugging code.])
+if test "x$enable_debug" != "xno"; then
+  AC_DEFINE(PFFT_ENABLE_DEBUG, [1], [Define to enable extra debugging code.])
 fi
 
 # disable fortran wrappers
@@ -86,8 +86,8 @@ AC_ARG_WITH(gfortran-wrappers,
 AC_ARG_ENABLE(synced-timing, 
   [AS_HELP_STRING([--enable-synced-timing], [synchronize all time measurements with MPI Barriers])],
   enable_synced_timing=$enableval, enable_synced_timing=no)
-if test "x$enable_synced_timing" = "xyes"; then
-  AC_DEFINE(PFFT_ENABLE_SYNCED_TIMING,1,[synchronize all time measurements with MPI Barriers.])
+if test "x$enable_synced_timing" != "xno"; then
+  AC_DEFINE(PFFT_ENABLE_SYNCED_TIMING, [1], [Define to synchronize all time measurements with MPI Barriers.])
 fi
 
 # set precision
