--- a/configure.ac
+++ b/configure.ac
@@ -230,6 +230,12 @@ AC_LANG_POP([Fortran])
 
 
 ################################################################################
+# Parallel characteristics
+################################################################################
+
+AC_OPENMP
+
+################################################################################
 # Libtool initialization
 ################################################################################
 
