--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -15,7 +15,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/kernel
 AM_CPPFLAGS += -I$(top_srcdir)/api
 
 # Libraries to add to all programs that are built.
-LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@.la $(fftw3_mpi_LIBS) $(fftw3_LIBS)
+LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@.la $(fftw3_mpi_LIBS) $(fftw3_threads_LIBS) $(fftw3_LIBS) $(OPENMP_CFLAGS)
 
 
 EXTRA_DIST = \
