use embeded fftw3 as a subpackage
This hugely simplifies the building process of pfft. Since the new
planners are unlikely to be included in next release of FFTW, it
makes sense to just ship in a release the patched version of FFTW
that is known to work with PFFT.

touch fftw3/Changelog

--- a/tests/fortran/Makefile.am
+++ b/tests/fortran/Makefile.am
@@ -4,11 +4,20 @@ include $(top_srcdir)/build-aux/fortran-rules.am
 # Directory of pfft.f (which is build first)
 AM_FCCPPFLAGS = -I$(top_builddir)/api
 
+# Directory of pfft.f (which is build first)
+AM_FCCPPFLAGS = -I$(top_builddir)/api
+
+# Directory of fftw3
+AM_FCCPPFLAGS += -I$(top_srcdir)/fftw3/api
+AM_FCCPPFLAGS += -I$(top_srcdir)/fftw3/mpi
+
 # OpenMP support
 AM_FCFLAGS = $(OPENMP_FCFLAGS)
 
 # Libraries to add to all programs that are built.
-LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@@OPENMP_SUFFIX@.la $(fftw3_openmp_LIBS) $(fftw3_mpi_LIBS) $(fftw3_LIBS)
+LDADD = $(top_builddir)/lib@PFFT_PREFIX@pfft@PREC_SUFFIX@@OPENMP_SUFFIX@.la 
+LDADD += $(top_builddir)/fftw3/libfftw3@PREC_SUFFIX@@OPENMP_SUFFIX@.la
+LDADD += $(top_builddir)/fftw3/mpi/libfftw3@PREC_SUFFIX@_mpi.la
 
 # noinst_LTLIBRARIES = libtests.la
 
