--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -3,6 +3,10 @@ AM_CPPFLAGS = -I$(top_srcdir)/kernel
 
 # Directory of pfft.h
 AM_CPPFLAGS += -I$(top_srcdir)/api 
+#
+# Directory of fftw3
+AM_CPPFLAGS += -I$(top_srcdir)/fftw3/api
+AM_CPPFLAGS += -I$(top_srcdir)/fftw3/mpi
 
 noinst_LTLIBRARIES = libutil.la
 
