add testcase for multiple r2c-FFTs

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -98,6 +98,9 @@ check_PROGRAMS += \
        	simple_check_r2r_3d_on_3d simple_check_r2r_3d_on_3d_transposed
 
 check_PROGRAMS += \
+	simple_check_r2c_3d_on_3d_transposed_many
+
+check_PROGRAMS += \
 	simple_check_ousam_c2c simple_check_ousam_c2c_transposed \
 	simple_check_ousam_c2r \
 	simple_check_ousam_r2c simple_check_ousam_r2c_transposed \
