update Fortran 2003 interface

--- a/api/pfft.f03.in
+++ b/api/pfft.f03.in
@@ -69,6 +69,15 @@
       import
     end subroutine pfft_cleanup
     
+    subroutine pfft_plan_with_nthreads(nthreads) bind(C, name='pfft_plan_with_nthreads')
+      import
+      integer(C_INT), value :: nthreads
+    end subroutine pfft_plan_with_nthreads
+    
+    integer(C_INT) function pfft_get_Nosthreads() bind(C, name='pfft_get_nthreads')
+      import
+    end function pfft_get_Nosthreads
+    
     type(C_PTR) function pfft_malloc(Nos) bind(C, name='pfft_malloc')
       import
       integer(C_SIZE_T), value :: Nos
@@ -179,6 +188,59 @@
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
       real(C_DOUBLE), dimension(*), intent(out) :: data
     end subroutine pfft_init_input_real
+    
+    subroutine pfft_clear_input_complex_3d(Nos,local_n,local_n_start,data) bind(C, name='pfft_clear_input_complex_3d')
+      import
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
+      complex(C_DOUBLE_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfft_clear_input_complex_3d
+    
+    subroutine pfft_clear_input_complex(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfft_clear_input_complex')
+      import
+      integer(C_INT), value :: rnk_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
+      complex(C_DOUBLE_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfft_clear_input_complex
+    
+    subroutine pfft_clear_input_complex_hermitian_3d(Nos,local_n,local_n_start,data) &
+               bind(C, name='pfft_clear_input_complex_hermitian_3d')
+      import
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
+      complex(C_DOUBLE_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfft_clear_input_complex_hermitian_3d
+    
+    subroutine pfft_clear_input_complex_hermitian(rnk_n,Nos,local_n,local_start,data) &
+               bind(C, name='pfft_clear_input_complex_hermitian')
+      import
+      integer(C_INT), value :: rnk_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
+      complex(C_DOUBLE_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfft_clear_input_complex_hermitian
+    
+    subroutine pfft_clear_input_real_3d(Nos,local_n,local_n_start,data) bind(C, name='pfft_clear_input_real_3d')
+      import
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
+      real(C_DOUBLE), dimension(*), intent(out) :: data
+    end subroutine pfft_clear_input_real_3d
+    
+    subroutine pfft_clear_input_real(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfft_clear_input_real')
+      import
+      integer(C_INT), value :: rnk_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
+      real(C_DOUBLE), dimension(*), intent(out) :: data
+    end subroutine pfft_clear_input_real
     
     real(C_DOUBLE) function pfft_check_output_complex_3d(Nos,local_n,local_n_start,data,comm) &
                             bind(C, name='pfft_check_output_complex_3d_f03')
@@ -1213,6 +1275,15 @@
       import
     end subroutine pfftf_cleanup
     
+    subroutine pfftf_plan_with_nthreads(nthreads) bind(C, name='pfftf_plan_with_nthreads')
+      import
+      integer(C_INT), value :: nthreads
+    end subroutine pfftf_plan_with_nthreads
+    
+    integer(C_INT) function pfftf_get_Nosthreads() bind(C, name='pfftf_get_nthreads')
+      import
+    end function pfftf_get_Nosthreads
+    
     type(C_PTR) function pfftf_malloc(Nos) bind(C, name='pfftf_malloc')
       import
       integer(C_SIZE_T), value :: Nos
@@ -1323,6 +1394,59 @@
       integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
       real(C_FLOAT), dimension(*), intent(out) :: data
     end subroutine pfftf_init_input_real
+    
+    subroutine pfftf_clear_input_complex_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftf_clear_input_complex_3d')
+      import
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
+      complex(C_FLOAT_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfftf_clear_input_complex_3d
+    
+    subroutine pfftf_clear_input_complex(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftf_clear_input_complex')
+      import
+      integer(C_INT), value :: rnk_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
+      complex(C_FLOAT_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfftf_clear_input_complex
+    
+    subroutine pfftf_clear_input_complex_hermitian_3d(Nos,local_n,local_n_start,data) &
+               bind(C, name='pfftf_clear_input_complex_hermitian_3d')
+      import
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
+      complex(C_FLOAT_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfftf_clear_input_complex_hermitian_3d
+    
+    subroutine pfftf_clear_input_complex_hermitian(rnk_n,Nos,local_n,local_start,data) &
+               bind(C, name='pfftf_clear_input_complex_hermitian')
+      import
+      integer(C_INT), value :: rnk_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
+      complex(C_FLOAT_COMPLEX), dimension(*), intent(out) :: data
+    end subroutine pfftf_clear_input_complex_hermitian
+    
+    subroutine pfftf_clear_input_real_3d(Nos,local_n,local_n_start,data) bind(C, name='pfftf_clear_input_real_3d')
+      import
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n_start
+      real(C_FLOAT), dimension(*), intent(out) :: data
+    end subroutine pfftf_clear_input_real_3d
+    
+    subroutine pfftf_clear_input_real(rnk_n,Nos,local_n,local_start,data) bind(C, name='pfftf_clear_input_real')
+      import
+      integer(C_INT), value :: rnk_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: Nos
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_n
+      integer(C_INTPTR_T), dimension(*), intent(in) :: local_start
+      real(C_FLOAT), dimension(*), intent(out) :: data
+    end subroutine pfftf_clear_input_real
     
     real(C_FLOAT) function pfftf_check_output_complex_3d(Nos,local_n,local_n_start,data,comm) &
                            bind(C, name='pfftf_check_output_complex_3d_f03')
