--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,35 @@ language: c
 compiler: gcc
 os: linux
 
-notifications:
-  email: true
+## Turn off sudo to run on container based infrastructure.
+sudo: false
 
 env:
   - MPI=openmpi
 
-before_install:
-  - sudo apt-get update -qq
-  - sh ./conf/travis-install-mpi.sh $MPI
+addons:
+  apt:
+    packages:
+    - autoconf
+    - automake
+    - libtool
+    - libfftw3-dev
+    - libcunit1-dev
+    - libopenmpi
+  
+# before_install:
+#   - sudo apt-get update -qq
+#   - sh ./conf/travis-install-mpi.sh $MPI
 
 install:
   - sh ./conf/travis-install-fftw.sh
 
 script: ./bootstrap.sh && ./configure CPPFLAGS="-I$HOME/local/fftw-3.3.4/include" LDFLAGS="-L$HOME/local/fftw-3.3.4/lib" FC=mpif90 CC=mpicc MPICC=mpicc MPIFC=mpif90 && make && make check
 
+## Print config.log for debugging.
 after_failure: "cat config.log"
 
+## Turn on email notifications.
+notifications:
+  email: true
 
