fix travis-ci email notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,9 @@ after_failure: "cat config.log"
 
 ## Turn on email notifications.
 notifications:
-  email: true
+  email:
+    recipients:
+      - michael.pippig.tuc@gmail.com
+    on_success: change # choose between: always, change, never
+    on_failure: always # choose between: always, change, never
 
